<resources>
    <string name="app_name">FeelsAppMan</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="title_page">FeelsAppMan</string>
    <string name="select_mood">Select Mood</string>
    <string name="social_setting">Social Setting (Optional)</string>
    <string name="title_activity_self_news_feed_actvity">SelfNewsFeedActvity</string>
    <string name="action_settings">Settings</string>
    <string name="trigger_cause">Include Trigger?</string>
    <string name="add_location">Include Location?</string>
    <string name="comment_constraint">20 chars or 3 words</string>
    <string name="browse">Browse</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="listviewbutton_text">List View</string>
    <string name="filterbutton_text">Filter</string>
    <string name="mapbutton_text">Map</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="managefollow">
        <item>Following</item>
        <item>Followers</item>
        <item>Follow Requests</item>
    </string-array>

    <string-array name="followers">
        <item>Following</item>
        <item>Follow Requests</item>
    </string-array>

</resources>
